# bridge

./: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  deployment.md  docker-compose.yml  extract_privatekey.py  setup.sh
bin-version/src/: lib.rs
bridge/: Cargo.toml
bridge-cli/: Cargo.toml
bridge-cli/src/: lib.rs  main.rs
bridge-config/: cli-config.yaml  deployment.txt  server-config.yaml
bridge-indexer-alt/: Cargo.toml  README.md
bridge-indexer-alt/src/: eth_indexer.rs  lib.rs  main.rs  metrics.rs
bridge-indexer-alt/src/handlers/: error_handler.rs  governance_action_handler.rs  mod.rs  token_transfer_data_handler.rs  token_transfer_handler.rs
bridge-node/server-config/: bridge_authority.key  bridge_client.key  starcoin_client.key
bridge-schema/: Cargo.toml
bridge-schema/migrations/00000000000000_diesel_initial_setup/: up.sql
bridge-schema/migrations/2024-07-02-101842_error_transaction/: down.sql  up.sql
bridge-schema/src/: models.rs  schema.rs
bridge-watchdog/: eth_bridge_status.rs  eth_vault_balance.rs  lib.rs  metrics.rs  starcoin_bridge_status.rs
bridge/abi/: starcoin_bridge.json
bridge/src/: abi.rs  action_executor.rs  config.rs  crypto.rs  encoding.rs  error.rs  eth_client.rs  eth_mock_provider.rs  eth_syncer.rs  eth_transaction_builder.rs  events.rs  lib.rs  main.rs  metrics.rs  monitor.rs  node.rs  orchestrator.rs  simple_starcoin_rpc.rs  starcoin_bridge_client.rs  starcoin_bridge_mock_client.rs  starcoin_bridge_proxy_client.rs  starcoin_bridge_syncer.rs  starcoin_bridge_transaction_builder.rs  starcoin_client.rs  starcoin_jsonrpc_client.rs  starcoin_node_test.rs  starcoin_rpc_proxy_client.rs  starcoin_test_utils.rs  storage.rs  test_bridge.rs  test_utils.rs  types.rs  utils.rs
contracts/: incentivize_testnet_faq.md
contracts/evm/: .gitignore  remappings.txt
contracts/move/: Move.toml  Stc-Bridge-Move.v0.0.1.blob
docker/: .gitignore  README.md  nginx.conf
fastcrypto/: Cargo.toml
fastcrypto-derive/: Cargo.toml
fastcrypto-derive/src/: lib.rs
fastcrypto/benches/: crypto.rs  groups.rs  merkle.rs
fastcrypto/src/: ed25519.rs  encoding.rs  error.rs  hash.rs  hmac.rs  lib.rs  private_seed.rs  serde_helpers.rs  traits.rs  utils.rs
mysten-common/: Cargo.toml
mysten-common/src/: decay_moving_average.rs  logging.rs  moving_window.rs  random.rs
mysten-common/src/sync/: async_once_cell.rs  notify_once.rs  notify_read.rs
mysten-metrics/: Cargo.toml
mysten-metrics/src/: guards.rs  histogram.rs  lib.rs  monitored_mpsc.rs  thread_stall_monitor.rs
prometheus-closure-metric/: Cargo.toml
prometheus-closure-metric/src/: lib.rs
scripts/: auto-gen-config.sh  bridge_governance.sh  bridge_transfer.sh  indexer.sh  init-bridge.sh  test_eth_indexer.sh
shared-crypto/: Cargo.toml
shared-crypto/src/: intent.rs
starcoin-bridge-authority-aggregation/: Cargo.toml
starcoin-bridge-authority-aggregation/src/: lib.rs
starcoin-bridge-config/: Cargo.toml
starcoin-bridge-config/src/: lib.rs
starcoin-bridge-data-ingestion-core/: Cargo.toml
starcoin-bridge-data-ingestion-core/src/: lib.rs
starcoin-bridge-field-count/: Cargo.toml
starcoin-bridge-field-count/src/: lib.rs
starcoin-bridge-indexer-alt-framework/: Cargo.toml
starcoin-bridge-indexer-alt-framework-store-traits/: Cargo.toml
starcoin-bridge-indexer-alt-framework-store-traits/src/: lib.rs
starcoin-bridge-indexer-alt-framework/src/: cluster.rs  lib.rs  metrics.rs  postgres.rs  task.rs
starcoin-bridge-indexer-alt-framework/src/ingestion/: broadcaster.rs  client.rs  error.rs  local_client.rs  mod.rs  regulator.rs  remote_client.rs  rpc_client.rs  test_utils.rs
starcoin-bridge-indexer-alt-framework/src/mocks/: store.rs
starcoin-bridge-indexer-alt-framework/src/pipeline/: logging.rs  mod.rs  processor.rs
starcoin-bridge-indexer-alt-framework/src/pipeline/concurrent/: collector.rs  commit_watermark.rs  committer.rs  mod.rs  pruner.rs  reader_watermark.rs
starcoin-bridge-indexer-alt-framework/src/pipeline/sequential/: committer.rs  mod.rs
starcoin-bridge-indexer-alt-metrics/: Cargo.toml
starcoin-bridge-indexer-alt-metrics/src/: db.rs  lib.rs
starcoin-bridge-indexer-builder/: Cargo.toml
starcoin-bridge-indexer-builder/src/: indexer_builder.rs  lib.rs  progress.rs  starcoin_bridge_datasource.rs
starcoin-bridge-indexer-builder/tests/: indexer_test_utils.rs  indexer_tests.rs
starcoin-bridge-json-rpc-api/: Cargo.toml
starcoin-bridge-json-rpc-types/: Cargo.toml
starcoin-bridge-json-rpc-types/src/: lib.rs
starcoin-bridge-keys/: Cargo.toml
starcoin-bridge-keys/src/: lib.rs
starcoin-bridge-macros/: Cargo.toml
starcoin-bridge-metrics-push-client/: Cargo.toml
starcoin-bridge-metrics-push-client/src/: client.rs  lib.rs
starcoin-bridge-pg-db/: Cargo.toml
starcoin-bridge-sdk/: Cargo.toml
starcoin-bridge-sdk/src/: apis.rs  error.rs  lib.rs
starcoin-bridge-sql-macro/: Cargo.toml
starcoin-bridge-sql-macro/src/: lexer.rs  lib.rs  parser.rs
starcoin-bridge-storage/: Cargo.toml
starcoin-bridge-storage/src/: lib.rs
starcoin-bridge-synthetic-ingestion/: Cargo.toml
starcoin-bridge-test-transaction-builder/: Cargo.toml
starcoin-bridge-test-transaction-builder/src/: lib.rs
starcoin-bridge-tls/: Cargo.toml
starcoin-bridge-tls/src/: acceptor.rs  certgen.rs  lib.rs  verifier.rs
starcoin-bridge-types/: Cargo.toml
starcoin-bridge-types/src/: eth_checkpoint_content.rs  lib.rs  starcoin_transaction_builder.rs
starcoin-bridge-vm-types/: Cargo.toml
starcoin-common/: Cargo.toml
starcoin-metrics/: Cargo.toml
starcoin-rpc-proxy/: Cargo.toml
stubs/: README.md
stubs/starcoin-bridge-data-ingestion-core/: Cargo.toml
stubs/starcoin-bridge-data-ingestion-core/src/: lib.rs
telemetry-subscribers/: Cargo.toml  README.md
test-cluster/: Cargo.toml
typed-store/: Cargo.toml  build.rs
typed-store-derive/: Cargo.toml
typed-store-derive/src/: lib.rs
typed-store-error/: Cargo.toml
typed-store/src/: lib.rs  metrics.rs  traits.rs  util.rs
typed-store/src/rocks/: mod.rs  options.rs  safe_iter.rs
typed-store/tests/: macro_tests.rs
(+96 files in other folders)
