[package]
name = "starcoin-bridge-indexer-alt"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
starcoin-bridge.workspace = true
starcoin-bridge-schema.workspace = true
starcoin-bridge-indexer-alt-framework.workspace = true
starcoin-bridge-indexer-alt-metrics.workspace = true
async-trait.workspace = true
tracing.workspace = true
bcs.workspace = true
move-core-types.workspace = true
diesel.workspace = true
diesel-async.workspace = true
clap.workspace = true
url.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
serde_json.workspace = true

[[bin]]
name = "bridge-indexer-alt"
path = "src/main.rs"
