[package]
name = "mysten-common"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"
either = "1.13"
snap = "1.1.0"
once_cell = "1.18.0"
tokio = { version = "1.46", features = ["full"] }
futures = "0.3.28"
parking_lot = "0.12.1"
reqwest.workspace = true
fastcrypto.workspace = true
mysten-metrics = { path = "../mysten-metrics" }
starcoin-bridge-macros = { workspace = true }
antithesis_sdk = "0.2.6"
tempfile = "3.20.0"
tracing = "0.1.37"
anyhow = "1.0.71"
serde_json = "1.0.95"

