[package]
name = "starcoin-bridge-indexer-builder"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
tap.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
mysten-metrics.workspace = true
starcoin-bridge-types.workspace = true
starcoin-bridge-sdk.workspace = true
starcoin-bridge-data-ingestion-core.workspace = true
futures.workspace = true
tracing.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
starcoin-bridge-indexer-builder = { workspace = true, features = ["test-utils"] }

[features]
test-utils = []
