[package]
name = "starcoin-bridge-json-rpc-types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Use Starcoin RPC types
starcoin-rpc-api = { path = "../../rpc/api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
