[package]
name = "starcoin-bridge-metrics-push-client"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
snap.workspace = true
tokio.workspace = true
tracing.workspace = true

fastcrypto.workspace = true
starcoin-metrics.workspace = true
starcoin-bridge-tls.workspace = true
starcoin-bridge-types.workspace = true

