[package]
name = "starcoin-bridge-storage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Stub for Starcoin bridge
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Use BCS for serialization (same as Starcoin uses)
bcs = "0.1"
byteorder = "1.5"
integer-encoding = "3.0"
num_enum = "0.7"
