[package]
name = "starcoin-bridge-test-transaction-builder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Use Starcoin types
starcoin-types = { git = "https://github.com/starcoinorg/starcoin.git", branch = "bob/master-native-bridge" }
starcoin-vm-types = { git = "https://github.com/starcoinorg/starcoin.git", branch = "bob/master-native-bridge" }

anyhow = "1.0"
