[package]
name = "typed-store-derive"
version = "0.3.0"
license = "Apache-2.0"
description = "macros for the typed-store crate"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
itertools = "0.13.0"
