[package]
name = "typed-store"
version = "0.4.0"
license = "Apache-2.0"
description = "a typed database interface"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
backoff.workspace = true
bcs.workspace = true
bincode.workspace = true
collectable.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
fdlimit.workspace = true
once_cell.workspace = true
tap.workspace = true
prometheus.workspace = true
hdrhistogram.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-store-error.workspace = true
typed-store-derive.workspace = true
typed-store-workspace-hack.workspace = true
starcoin-bridge-macros.workspace = true
rand.workspace = true
async-trait.workspace = true
itertools.workspace = true
mysten-common.workspace = true
mysten-metrics.workspace = true
[target.'cfg(not(windows))'.dependencies]
tidehunter = {git = "https://github.com/andll/tidehunter.git", rev = "dd686f055375aa8fa2145618301bdfd5170a2a6b", version = "0.1.0", optional = true}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["jemalloc"] }

[dev-dependencies]
tempfile = "3.20.0"
once_cell = "1.18.0"
rstest = "0.16.0"
rand = "0.8.5"
uint = "0.9.4"
