[package]
name = "starcoin-bridge-data-ingestion-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Stub for Starcoin bridge
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
tokio = { workspace = true }
starcoin-bridge-types = { path = "../../starcoin-bridge-types" }
